--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       <script src="js/tota11y.min.js"></script>
       <br></br>
         phone <a href="tel:+16192199392">+16192199392</a><br>
-        email <a href="mailto:annie@anniebrown.co">andrea@reliabl.ai</a><br>
+        email <a href="mailto:andrea@reliabl.ai">andrea@reliabl.ai</a><br>
         <br></br>
         <button><a target="_blank" href="https://www.linkedin.com/in/andreafrancesb/">
           connect with me on linkedin</a></button>
