--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
 </head>
+<body>
 <header class="page-header">
   <img src="images/logo.png" 
   style= "width: 400px; height: 150px; object-fit: cover;"
@@ -35,7 +36,7 @@
   </ul>
 </nav>
 </header>
-<body>
+
   <img src="images/profile_portrait.png" class="profile__portrait" alt="Andrea Brown Portrait">
   <div class="profile">
   <h1>Hello World!</h1>
@@ -45,8 +46,8 @@
   <a href="https://github.com/andreafrancesb">Check out some of my code</a>
   </div>  
   <script src="js/tota11y.min.js"></script>
-</body>
-<footer class="page-footer">
+
+<footer class= "page-footer">
   <p>Find me on</p>
   <div class="social-media">
   <!-- Github logo -->
@@ -55,5 +56,9 @@
   <img src="images/twitter.png" alt="twitter logo">
   <!-- LinkedIn logo -->
   <img src="images/linkedin.png" alt="linkedin logo">
+  </div>
 </footer>
+
+</body>
+
 </html>
